trunk/Archive2/72/bcd8cb8699c5c1/output
main.cpp: In function 'void connect(T*, const string&)':
main.cpp:14:24: error: 'Args' was not declared in this scope
     std::function<void(Args...)> newFunc = std::bind(U, targObj); //expected primary expression before ',' token
                        ^
main.cpp:14:32: error: type/value mismatch at argument 1 in template parameter list for 'template<class _Signature> class std::function'
     std::function<void(Args...)> newFunc = std::bind(U, targObj); //expected primary expression before ',' token
                                ^
main.cpp:14:32: error:   expected a type, got '(void)(<expression error>)'
main.cpp:14:42: error: invalid type in declaration before '=' token
     std::function<void(Args...)> newFunc = std::bind(U, targObj); //expected primary expression before ',' token
                                          ^
main.cpp:14:55: error: expected primary-expression before ',' token
     std::function<void(Args...)> newFunc = std::bind(U, targObj); //expected primary expression before ',' token
                                                       ^
main.cpp:15:5: error: 'funcMap' was not declared in this scope
     funcMap[funcName] = newFunc;
     ^
